<?xml version="1.0"?>
<package format="2">
  <name>filters</name>
  <version>0.0.0</version>
  <description>
    This library provides a standardized interface for processing data as a sequence 
    of filters.  This package contains a base class upon which to build specific implementations
    as well as an interface which dynamically loads filters based on runtime parameters.  
  </description>

  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/filters</url>

  <buildtool_depend version_gte="0.5.68">ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <filters plugin="/home/user/ros2_ws_filters_test1/src/filters/default_plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>  

 
