<package format="2">
  <name>filters</name>
  <version>1.9.0</version>
  <description>
    This library provides a standardized interface for processing data as a sequence 
    of filters.  This package contains a base class upon which to build specific implementations
    as well as an interface which dynamically loads filters based on runtime parameters.  
  </description>

  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/filters</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>boost</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <filters plugin="default_plugins.xml" />
  </export>

</package>
